--- a/src/styles/less/divider.less
+++ b/src/styles/less/divider.less
@@ -12,3 +12,11 @@
         border-left: 1px solid var(--gray-color-100);
     }
 }
+
+html.dark .divider {
+    border-color: var(--gray-color-800);
+
+    &.vertical {
+        border-color: var(--gray-color-800);
+    }
+}
