--- a/src/styles/less/layout.less
+++ b/src/styles/less/layout.less
@@ -4,8 +4,9 @@
 
 .row {
     .flex;
+    flex-grow: 0;
 
-    @media @media_xl {
+    @media (@media_xl) {
         flex-direction: column;
         align-items: flex-start;
     }
